[WCMSFEQ-1028] fix link misalignment by forcing clearfix div inserted by jquery-ui accordion to be 100%

--- a/CancerGov/_src/StyleSheets/_homelanding.scss
+++ b/CancerGov/_src/StyleSheets/_homelanding.scss
@@ -323,6 +323,7 @@ a.learn-more {
 }
 .guide-card--home .clearfix { 
 	flex-grow: 2;
+	height: 100%; /* forces entire clearfix div to be 100%  */
 	ul {
 		height: 100%;/* forces ul to be same height as parent clearfix inserted by jquery-ui accordion  */
 	}
